# kombu-pyamqp-threadsafe

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  llms-full.txt  llms.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: mkdocs.yml
docs/docs/: index.md  index.ru.md  reproduce.md  reproduce.ru.md
docs/docs/assets/css/: custom.css
docs/docs/benchmarks/: drainer.md  drainer.ru.md  index.md  index.ru.md  recovery.md  recovery.ru.md  scalability.md  scalability.ru.md  stability.md  stability.ru.md  throughput.md  throughput.ru.md
docs/docs/javascripts/: mathjax.js
docs/docs/results/: index.md  index.ru.md
project/features/FEAT-0001-dedicated-drainer/: FEAT-0001-PLAN-01.md  PLANNER_OUTPUT.md
project/features/FEAT-0001-dedicated-drainer/review-request-changes/: FEAT-0001-ISSUE-001.md  FEAT-0001-ISSUE-001_solved.md  FEAT-0001-ISSUE-002.md  FEAT-0001-ISSUE-002_solved.md  FEAT-0001-ISSUE-003.md  FEAT-0001-ISSUE-003_solved.md  FEAT-0001-ISSUE-004.md  FEAT-0001-ISSUE-004_solved.md  FEAT-0001-ISSUE-005.md  FEAT-0001-ISSUE-005_solved.md  FEAT-0001-ISSUE-006.md  FEAT-0001-ISSUE-006_solved.md  FEAT-0001-ISSUE-007.md  FEAT-0001-ISSUE-007_solved.md  FEAT-0001-ISSUE-008.md  FEAT-0001-intentional-close-signal_solved.md
project/frameworks/: competency-map.md
project/frameworks/DPF-CONCURRENT-PROGRAMMING/: DPF.md
project/frameworks/DPF-CONCURRENT-PROGRAMMING/references/: critic-review-2026-07-14-r1.md  critic-review-2026-07-14-r2.md  critic-review-2026-07-14-r3.md  critic-review.md  quality-record-2026-07-14.md  scope.md  sota-research.md  source-pack.md  theses-antitheses.md  web-verification-2026-07-14.md
project/frameworks/DPF-DEDICATED-IO-THREAD/: DPF.md
project/frameworks/DPF-DEDICATED-IO-THREAD/references/: critic-review-2026-07-14-r1.md  critic-review-2026-07-14-r2.md  critic-review.md  quality-record-2026-07-14.md  scope.md  sota-research.md  source-pack.md  theses-antitheses.md  web-verification-2026-07-14.md
project/research/: kombu-hub-research-2026-07-14.md
scripts/: generate_charts.py  run_benchmarks.py
src/: bench_metrics.py  testing.py  toxiproxy_client.py
src/kombu_pyamqp_threadsafe/: __init__.py  drainer.py  producer.py  simple.py
tests/: __init__.py  conftest.py  test_channel.py  test_channel_coordinator.py  test_channel_operation.py  test_channel_pool.py  test_channel_pool_race_condition.py  test_connection.py  test_connection_drainer.py  test_connection_ensure.py  test_drain_guard.py  test_drain_guard_exceptions.py  test_drainer_integration.py  test_drainer_reconnect.py  test_import.py  test_integration_reconnect.py  test_producer.py  test_publish_collect_race.py
tests/benchmarks/: __init__.py  bench_comprehensive.py  bench_race_conditions.py  bench_realistic.py  bench_recovery_latency.py  bench_throughput.py  conftest.py  test_drainer_benchmarks.py  test_drainer_fragmentation.py  test_drainer_shutdown.py  test_toxiproxy_integration.py
tests/benchmarks/fixtures/: __init__.py  metrics.py  toxiproxy.py
