[build-system]
# uv_build is pre-1.0; minor bumps may break, so cap at the next minor per uv's own guidance.
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "kombu-pyamqp-threadsafe"
version = "0.7.1"
description = "Threadsafe implementation of pyamqp transport for kombu"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "spumer", email = "9034262+spumer@users.noreply.github.com" }]
requires-python = ">=3.10"
keywords = ["kombu", "pyamqp", "amqp", "rabbitmq", "threadsafe", "thread-safety"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "kombu>=5.6.1,<6",
]

[project.urls]
Repository = "https://github.com/spumer/kombu-pyamqp-threadsafe"
Issues = "https://github.com/spumer/kombu-pyamqp-threadsafe/issues"
Changelog = "https://github.com/spumer/kombu-pyamqp-threadsafe/blob/master/CHANGELOG.md"

[dependency-groups]
# PEP 735 dev dependencies (not published). Installed by `uv sync`.
dev = [
    "commitizen>=3.2.1",
    "coverage[toml]>=7.2.5",
    "ipykernel>=6.29.2",
    # mypy 2.x crashes with INTERNAL ERROR on this codebase; stay on 1.x.
    "mypy>=1.2.0,<2",
    "pdoc>=13.1.1",
    "poethepoet>=0.20.0",
    "pre-commit>=3.3.1",
    "pytest>=7.3.1",
    "pytest-clarity>=1.0.1",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.2.1",
    "ruff>=0.2.1",
]
docs = [
    "mkdocs-material>=9.7.0,<10",
    "mkdocs-charts-plugin>=0.0.13",
    "mkdocs-static-i18n>=1.3.0,<2",
]

[tool.uv]
# Keep the dev group in sync by default.
default-groups = ["dev"]

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump(release): v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]
omit = [
    "tests/*",
    "src/bench_metrics.py",
    "src/toxiproxy_client.py",
    "src/testing.py",
]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
python_version = "3.10"
junit_xml = "reports/mypy.xml"
exclude = "^tests/"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
pythonpath = ["src"]
python_files = ["test_*.py", "bench_*.py"]
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml -m 'not benchmark'"
testpaths = ["src", "tests"]
xfail_strict = true
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"', run with '-m benchmark')",
    "slow: marks tests as slow",
    "stress: marks tests as stress tests",
]

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
ignore-init-module-imports = true
select = ["A", "ASYNC", "B", "C4", "C90", "D", "DTZ", "E", "F", "FLY", "I", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PL", "PT", "Q", "RET", "RUF", "RSE", "SIM", "TID", "UP", "W", "YTT"]
ignore = [
  "D203", "D213", "E501", "G010", "PGH003", "RET504", "S101", "S307",
  "D101",  # missing docstring in public class
  "D107",  # missing docstring in public method
  "D102",  # missing docstring in public method
]
unfixable = ["F401", "F841"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.poe.tasks]  # https://github.com/nat-n/poethepoet

  [tool.poe.tasks.docs]
  help = "Generate this package's docs"
  cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      kombu_pyamqp_threadsafe
    """

    [[tool.poe.tasks.docs.args]]
    help = "The docstring style (default: google)"
    name = "docformat"
    options = ["--docformat"]
    default = "google"

    [[tool.poe.tasks.docs.args]]
    help = "The output directory (default: docs)"
    name = "outputdirectory"
    options = ["--output-directory"]
    default = "docs"

  [tool.poe.tasks.lint]
  help = "Lint this package"

    [[tool.poe.tasks.lint.sequence]]
    cmd = """
      pre-commit run
        --all-files
        --color always
      """

  [tool.poe.tasks.test]
  help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage xml"

  [tool.poe.tasks.benchmark]
  help = "Run benchmarks"
  cmd = "pytest -m benchmark tests/benchmarks/"

  [tool.poe.tasks.fmt]
  help = "Code formatting"

    [[tool.poe.tasks.fmt.sequence]]
    cmd = """
      ruff check
      --force-exclude
      --extend-fixable=F401,F841
      --fix-only
    """

    [[tool.poe.tasks.fmt.sequence]]
    cmd = "ruff format"
